# tiktok-live-recorder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  GUI_DEMO.md  GUI_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_DESCRIPTION.txt  README.md  docker-compose.yml  enums.py  errors.py  httpclient.py  logger_manager.py  main.py  prova.py  pyproject.toml  requirements.txt  tiktokbot.py
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  docker-readme.yml  install-test.yml  release.yml  ruff.yml
Docker/: Dockerfile  README.md  run.sh
src/: Dockerfile  check_updates.py  check_upts.py  cookies.json  custom_exceptions.py  entrypoint.sh  enums.py  errors.py  genStr.py  gui_main.py  http_client.py  launcher.py  main.py  requirements-dev.txt  requirements.txt  telegram.json  tiktokbot.py
src/core/: chat_collector.py  telegram.py  tiktok_api.py  tiktok_recorder.py  tiktok_waf_solver.py  tiktokbot.py  video_management.py
src/core/crypto/: x_gnarly.py
src/gui/: __init__.py  main_window.py
src/gui/widgets/: __init__.py
src/http_utils/: http_client.py
src/tiktok/: tiktok_api.py  tiktok_crypto.py  tiktok_recorder.py  tiktok_waf_solver.py
src/tiktok/encryption/: strdata.py  xbogus.py  xgnarly.py
src/upload/: telegram.py
src/utils/: args_handler.py  custom_exceptions.py  dependencies.py  enums.py  logger_manager.py  recorder_config.py  utils.py  video_management.py
